rook-ceph/ingress-rook-ceph-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - rook-ceph.infra.${dns_domain}
     secretName: letsencrypt-wildcard-cert
  rules:
  - host: rook-ceph.infra.${dns_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
